AutoCompletion Textfield added for Location and ContainerType